Add scroll bar and update index

--- a/website/css/navbar.css
+++ b/website/css/navbar.css
@@ -11,8 +11,14 @@ nav.navbar{
 }
 .navbar ul.navbar-nav{
     position: absolute;
-    right: 43%;
+    right: 40%;
     font-size: 20px;
+}
+.navbar a{
+    color: black!important;
+}
+.navbar ul li{
+    padding: 7px;
 }
 /*  Icons   */
 
