--- a/website/css/navbar.css
+++ b/website/css/navbar.css
@@ -1,32 +1,35 @@
-nav.navbar{
-    position: fixed;
-    left: 0;
-    top: 0;
-    right: 0;
-    width: 100%;
-    min-height: 60px;
+header ul{
+	position:fixed;
+	width:100%;
+	padding: 14px;
+	list-style-type: none;
+	overflow: hidden;
     box-shadow: 0 0 30px black, 0 0 30px white;
-    z-index: 10000; 
-    background-color: rgba(204, 204, 204, 0.7)!important;
+	background-color: rgba(204, 204, 204, 0.7)!important;
 }
-.navbar ul.navbar-nav{
-    position: absolute;
-    right: 40%;
+header a, header a:hover,
+header i, header i:hover{
+    color: black;
     font-size: 20px;
+    text-decoration: none;
+    margin-left: 20px;
 }
-.navbar a{
-    color: black!important;
+header ul li.navbarList,
+header ul li.navbarList div{
+    display: inline;
 }
-.navbar ul li{
-    padding: 7px;
+header ul div.leftNavbarList{
+    position: absolute;
+    top: 23%;
+    right: 65px;
 }
-/*  Icons   */
 
-ul.navbar-nav li.colorMode div.open,
-ul.navbar-nav li.colorMode.active div.close{
-    display: block;
+/*  Icons   */
+header ul li.colorMode div.open,
+header ul li.colorMode.active div.close{
+    display: inline;
 }
-ul.navbar-nav li.colorMode div.close,
-ul.navbar-nav li.colorMode.active div.open{
+header ul li.colorMode div.close,
+header ul li.colorMode.active div.open{
     display: none;
 }
