--- a/website/css/style.css
+++ b/website/css/style.css
@@ -75,3 +75,27 @@ body{
     font-size: 35px;
     border-radius: 50%;
   }
+
+.Earthquake {
+
+  width:100%;
+  height:500px; 
+  border:red solid;
+}
+
+.Earthquake_pic
+{
+  width:50%; 
+  height:499px; 
+  border:solid orange; 
+  position: absolute;
+}
+
+.Earthquake_txt
+{
+  width:50%; 
+  height:499px; 
+  border:solid blueviolet; 
+  transform: translateX(100%);
+  position: absolute;
+}
