--- a/website/css/style.css
+++ b/website/css/style.css
@@ -79,8 +79,7 @@ div.carousel-item img{
 	filter: blur(8px);
 }
 .carousel-item a img {
-  display: block;
-  width: 100%;
+  transition: 1s;
 }
 
 .img-overlay{
@@ -95,7 +94,7 @@ div.carousel-item img{
     align-items: center;
     justify-content: center;
     opacity: 0;
-    transition: opacity 0.25s;
+    transition: 0.5s;
 }
 
 .img-overlay:hover {
