--- a/website/css/style.css
+++ b/website/css/style.css
@@ -2,19 +2,25 @@ body{
     background-color: var(--BG);
     color: var(--text);
   }
-.alphaHomePage
-{
+.alphaHomePage{
     width: 100%;
     height: 1000px;
-    border:3px red solid;
     position: relative;
     top:60px; 
+}
+.alphaHomePage video{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  overflow: visible;
+  filter: blur(50px);
 }
 .alphaHomePageLogo
 {
   width:300px;
   height: 230px;
-  top: 20px;
+  top: 200px;
   margin: 0 auto;
   position: relative;
 }
@@ -22,7 +28,7 @@ body{
 {
   width:400px;
   height: 100px;
-  top: 20px;
+  top: 200px;
   margin: 0 auto;
   padding: 10px;
   position: relative;
@@ -36,6 +42,7 @@ body{
   width:100%; 
   height:1000px; 
   transform:translateY(60px);
+  background-color: var(--BG);
 }
   
 div#carouselExampleIndicators{
