--- a/website/css/switch_arrow_disasters.css
+++ b/website/css/switch_arrow_disasters.css
@@ -1,5 +1,5 @@
 .switch_arrow_disasters div a{
-    position: absolute;
+    position: fixed;
     bottom: 5%;
     color: var(--text);
     text-decoration: none;
