--- a/website/css/style.css
+++ b/website/css/style.css
@@ -28,18 +28,22 @@ body{
 }
 .alphaHomePageText
 {
-  width:400px;
-  height: 100px;
-  top: 200px;
+  width:20%;
+  height: 40px;
+  top: 20%;
   margin: 0 auto;
-  padding: 10px;
+  padding-bottom: 90px;
   position: relative;
 border:3px rgba(0, 0, 0, 0) solid;
   background-color: rgba(50, 146, 163, 0.603);
   text-align: center;
-  font-size: 3em;
+  font-size: 3.8em;
   border-radius:5px;
   box-shadow:0 0 30px black;  
+  font-family: 'Headland One', serif;
+  text-shadow:  5px 5px 10px black;  
+  font-weight: 500;
+  
   
 }
 /*    Content    */
@@ -71,7 +75,7 @@ div.carousel-item img{
   
 #carouselExampleIndicators
 {
-  box-shadow: 5px 5px 30px rgba(204, 204, 204, 0.7), 5px 5px 30px black;  
+  box-shadow: 5px 5px 10px rgba(204, 204, 204, 0.7), 5px 5px 10px black;  
 
 }
   button.carousel-control-prev i,
@@ -143,7 +147,8 @@ div.carousel-item img{
 .about-us .user .username{
   color: var(--text);
   font-size: 30px;
-  margin-top: 5px;
+  margin-top: 15px;
+  text-shadow: 0 0  10px rgba(204, 204, 204, 0.7), 0 0 40px black;  
 }
 .about-us .user .role{
   color: var(--text);
@@ -152,7 +157,7 @@ div.carousel-item img{
 
 .user img
 {
-  box-shadow: 5px 5px 20px rgba(204, 204, 204, 0.7), 5px 5px 20px black;  
+  box-shadow: 5px 5px 10px rgba(204, 204, 204, 0.7), 5px 5px 10px black;  
 }
 @media screen and (max-width: 1430px){
   
