--- a/website/css/subtopics.css
+++ b/website/css/subtopics.css
@@ -1,17 +1,17 @@
-.geophysical
+.Linkcontainer
 {
     width:100%;
     height: 800px; 
     border:solid red; 
-    transform:translateY(80px);
     display: flex; 
     flex-wrap:wrap; 
-    flex-flow: row column ;
+    flex-flow: row column;
      align-items: center;
      gap:20px; 
-     padding: 100px;
+     padding:100px;
+    
 }
-.geophysical-item
+.item
 {
     position: relative;
     display: inline-block;
@@ -21,23 +21,25 @@
     background-size: cover;
     background-repeat: no-repeat;
     color:black;
-    font-size: 3em;
+    font-size: 3.5em;
     align-self:baseline ;
     justify-content: space-around space-evenly;
 
 }
-.geophysical-item-txt
+.item-txt
 {
     padding-top:10px;
     width:350px;
     height:200px;
     opacity:0.5; 
+    font-weight: 10px;
+    text-shadow: 5px 5px 5px rgba(255, 255, 255, 0.7); 
 }
 
-.geophysical-item-txt:hover
+.item-txt:hover
 {
     opacity:1;
    
-    backdrop-filter: blur(20px);
-    box-shadow: 5px 5px 10px black;
+    backdrop-filter: blur(10px);
+    box-shadow: 5px 5px 5px rgba(204, 204, 204, 0.7), 5px 5px 5px black; 
 }
