--- a/website/css/switch_arrow_disasters.css
+++ b/website/css/switch_arrow_disasters.css
@@ -1,14 +1,17 @@
 .switch_arrow_disasters div a{
-    position: fixed;
+    position: absolute;
     bottom: 5%;
     color: var(--text);
     text-decoration: none;
     font-size: 20px;
+   
 }
 .switch_arrow_disasters .right_switch_arrow_disasters .right_arrow{
     right: 0.5%;
+    z-index: 200;
 }
 
 .switch_arrow_disasters .left_switch_arrow_disasters .left_arrow{
     left: 0.5%;
+    z-index: 200;
 }
